--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -4,18 +4,18 @@
             <th>#</th>
             <th>Bandera</th>
             <th>Nombre</th>
-            <th>Población</th>
+            <th>Área</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let pais of paises; let i = index">
             <td>{{i+1}}</td>
-            <td><img [src]="pais.flag" [alt]="pais.name" class="small-flag">
-            <td>{{pais.capital}}, {{pais.name}}</td>
-            <td>{{pais.population | number}}</td>
+            <td><img [src]="pais.flags[0]" [alt]="pais.name.common" class="small-flag">
+            <td>{{pais.capital}}, {{pais.name.common}}</td>
+            <td>{{pais.area | number}}</td>
             <td>
-                <a [routerLink]="['/pais', pais.alpha2Code]">Ver...</a>
+                <a [routerLink]="['/pais', pais.cca2]">Ver...</a>
             </td>
         </tr>
     </tbody>
