--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,27 +1,29 @@
-<h3>Buscar por region <small> {{regionActiva | titlecase}}</small></h3>
-<hr>
+<div class="animate__animated animate__fadeIn faster">
+    <h3>Buscar por region <small> {{regionActiva | titlecase}}</small></h3>
+    <hr>
 
-<h5>Seleccione la region</h5>
+    <h5>Seleccione la region</h5>
 
-<div class="row">
-    <div class="col">
+    <div class="row">
+        <div class="col">
 
-        <!-- [class.btn-primary]="region === regionActiva" -->
-        <!-- [ngClass]="{
-            'btn-primary' : region === regionActiva,
-            'btn-outline-primary' : region !== regionActiva
-        }" -->
+            <!-- [class.btn-primary]="region === regionActiva" -->
+            <!-- [ngClass]="{
+                'btn-primary' : region === regionActiva,
+                'btn-outline-primary' : region !== regionActiva
+            }" -->
 
-        <button *ngFor="let region of regiones"
-                [class]="getClaseCSS( region )"
-                (click)="activarRegion( region )"
-                (click)="buscar( region )">
-            {{ region | titlecase }}
-        </button>
+            <button *ngFor="let region of regiones"
+                    [class]="getClaseCSS( region )"
+                    (click)="activarRegion( region )"
+                    (click)="buscar( region )">
+                {{ region | titlecase }}
+            </button>
+        </div>
     </div>
-</div>
-<div *ngIf="paises.length>0" class="row">
-    <div class="col">
-        <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    <div *ngIf="paises.length>0" class="row">
+        <div class="col">
+            <app-pais-tabla [paises]="paises"></app-pais-tabla>
+        </div>
     </div>
 </div>
